--- a/chapter1.tex
+++ b/chapter1.tex
@@ -23,7 +23,8 @@ The purpose of this section is to present the company within which I developed m
     \label{fig:hosting-company}
 \end{figure}
 
-\newpage
+\textbf{\textcolor{primary}{KZ IT Services}} is a dynamic software company dedicated to delivering innovative IT solutions tailored to modern business needs. they are specialize in designing and developing robust, scalable applications that drive efficiency and digital transformation. thier experienced team leverages cutting-edge technology to create customized software that exceeds client expectations. With a strong commitment to quality and continuous improvement, they build lasting partnerships based on trust and excellence. At << KZ IT Services >>, innovation is at the core of everything they do, empowering thier clients to achieve sustainable growth and success.
+
 \begin{table}[htbp]
     \centering
     \caption{KZ IT Services - Company Information}
@@ -50,7 +51,6 @@ The purpose of this section is to present the company within which I developed m
     \end{tabular}
 \end{table}
 
-\textbf{\textcolor{primary}{KZ IT Services}} is a dynamic software company dedicated to delivering innovative IT solutions tailored to modern business needs. they are specialize in designing and developing robust, scalable applications that drive efficiency and digital transformation. thier experienced team leverages cutting-edge technology to create customized software that exceeds client expectations. With a strong commitment to quality and continuous improvement, they build lasting partnerships based on trust and excellence. At << KZ IT Services >>, innovation is at the core of everything they do, empowering thier clients to achieve sustainable growth and success.
 
 \section{Preliminary Study}
 
@@ -58,17 +58,15 @@ This preliminary study provides a review of some existing investment and asset m
 
 \subsection{Existing Solutions Study}
 
-After conducting extensive research on investment platforms similar to our concept across the global market, we carefully analyzed numerous applications based on their performance metrics and market position. From this comprehensive study, we specifically selected << Aseel >> \cite{AssilEyeInstitute} and << Stake >> \cite{StakeWebsite} for in-depth analysis \cite{G2CompetitiveAnalysis2024, AsanaCompetitiveAnalysis2024} due to their exceptional performance and status as leading companies in the real estate investment platform sector.
+After conducting extensive research on investment platforms similar to our concept across the global market, we carefully analyzed numerous applications based on their performance metrics and market position. From this comprehensive study, we specifically selected << Aseel >> and << Stake >> for in-depth analysis due to their exceptional performance and status as leading companies in the real estate investment platform sector.
 
 \subsubsection{The Aseel Platform}
 
-\textbf{\textcolor{primary}{Aseel}} \cite{AssilEyeInstitute} is a portal through which users can invest in different real estate projects with ease. The interface allows the clients to surf various investment opportunities, view 
-
-\newpage
+\textbf{\textcolor{primary}{Aseel}} is a portal through which users can invest in different real estate projects with ease. The interface allows the clients to surf various investment opportunities, view 
 
 the details of the properties, and then make an informed decision. Aseel introduces transparency in the investment process by offering financial data, updates regarding projects, and returns that are estimated. This platform comes with an easy-to-use dashboard through which one tracks their investments and manages their assets without any hassle. The interface of the Aseel Platform is shown in Figure \ref{fig:aseel-platform}.
 
-
+\newpage
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=0.65\textwidth]{images/Interface-of-the Aseel Platform.png}
@@ -89,7 +87,7 @@ the details of the properties, and then make an informed decision. Aseel introdu
 
 \subsubsection{The Stake Platform}
 
-\textbf{\textcolor{primary}{Stake}} \cite{StakeWebsite} is an online investment platform that deals with real estate crowdfunding. It provides the opportunity to invest in fractions of property ownership, hence diversifying a portfolio without huge capital. On Stake, there are AI-powered recommendations based on user preferences, seamless payment integration, and a secure environment for investment. Besides, liquidity is guaranteed by enabling exit options for investors who may want to sell their shares in ongoing projects. Figure \ref{fig:stake-platform} illustrates the interface of the Stake Platform.
+\textbf{\textcolor{primary}{Stake}} is an online investment platform that deals with real estate crowdfunding. It provides the opportunity to invest in fractions of property ownership, hence diversifying a portfolio without huge capital. On Stake, there are AI-powered recommendations based on user preferences, seamless payment integration, and a secure environment for investment. Besides, liquidity is guaranteed by enabling exit options for investors who may want to sell their shares in ongoing projects. Figure \ref{fig:stake-platform} illustrates the interface of the Stake Platform.
 
 \newpage
 \thispagestyle{empty}
@@ -104,7 +102,7 @@ the details of the properties, and then make an informed decision. Aseel introdu
 
 \subsection{Comparative and Critical Analysis}
 
-We can summarize all that comes from our analysis based on a number of criteria used for the evaluation of these applications \cite{LyssnaUXAnalysis2024, StrategicManagementInsightCA2024}.
+We can summarize all that comes from our analysis based on a number of criteria used for the evaluation of these applications.
 
 \begin{itemize}
     \item \textbf{Speed (C1)}: The platform should obtain value for the user as fast as possible and effectively, anticipating their proliferating expectations.
@@ -167,11 +165,11 @@ The \textbf{\textcolor{primary}{Korpor}} platform is a dual-benefit real estate 
 
 \section{Development methodology}
 
-Meeting project delivery deadlines is a critical challenge in software development. Common issues include insufficient technical specifications, poor time management with emerging technologies, and sudden requirement changes. To address these challenges, we follow an agile methodology using Git \cite{GitWebsite} for version control and GitHub \cite{GithubWebsite} for collaborative development.
+Meeting project delivery deadlines is a critical challenge in software development. Common issues include insufficient technical specifications, poor time management with emerging technologies, and sudden requirement changes. To address these challenges, we follow an agile methodology using Git for version control and GitHub for collaborative development.
 
 \subsection{SCRUM}
 
-\textbf{\textcolor{primary}{Scrum}} is an agile development approach that is used to create software using incremental and iterative methods. Scrum is a quick, flexible, and efficient agile methodology that is intended to provide value to the client at every stage of the project's development \cite{ScrumGuide2020}. Scrum is founded on empiricism and lean thinking, employing an iterative, incremental approach guided by the three pillars of transparency, inspection, and adaptation \cite{AtlassianScrumPillars, ScrumGuide2020}. Scrum's main goal is to meet customer needs by fostering an atmosphere of open communication, group accountability, and constant improvement, underpinned by the Scrum values of Commitment, Focus, Openness, Respect, and Courage \cite{ScrumGuide2020}. The development process begins with a broad concept of what must be constructed, developing a list of features that the product owner desires, and arranging them according to priority (product backlog).
+\textbf{\textcolor{primary}{Scrum}} is an agile development approach that is used to create software using incremental and iterative methods. Scrum is a quick, flexible, and efficient agile methodology that is intended to provide value to the client at every stage of the project's development \cite{ScrumGuide2020}. Scrum is founded on empiricism and lean thinking, employing an iterative, incremental approach guided by the three pillars of transparency, inspection, and adaptation \cite{ScrumGuide2020}. Scrum's main goal is to meet customer needs by fostering an atmosphere of open communication, group accountability, and constant improvement, underpinned by the Scrum values of Commitment, Focus, Openness, Respect, and Courage \cite{ScrumGuide2020}. The development process begins with a broad concept of what must be constructed, developing a list of features that the product owner desires, and arranging them according to priority (product backlog).
 
 \begin{figure}[ht!]
     \centering
