--- a/dedication.tex
+++ b/dedication.tex
@@ -45,7 +45,7 @@ To my friends, whose encouragement made this journey worthwhile.
 \begin{flushright}
     \begin{minipage}{0.4\textwidth}
         \centering
-        \includegraphics[width=1\textwidth]{images/Ahmed jaziri signature.png}\\
+        \includegraphics[width=1\textwidth]{images/Ahmed_jaziri_signature.png}\\
     \end{minipage}
 \end{flushright}
 
