--- a/general_introduction.tex
+++ b/general_introduction.tex
@@ -23,6 +23,8 @@
 \chapter*{\centering General Introduction}
 \addcontentsline{toc}{chapter}{General Introduction}
 
+\vspace{-1cm} % Adjust the value as needed
+
 \begingroup
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{0.6em}
