--- a/chapter5.tex
+++ b/chapter5.tex
@@ -1,4 +1,4 @@
-\chapter{Blockchain}
+\chapter{Blockchain Transaction Management}
 
 \chapterquote{Blockchain is the technology that allows trust without trusting.}{Vitalik Buterin \cite{Buterin2014Ethereum}}
 
@@ -9,6 +9,7 @@ The blockchain payment integration represents a crucial component of the Korpor 
 
 The main feature centers on investor payment flows where users can securely invest in real estate projects through Paymee payment gateway, with all transactions automatically recorded on the blockchain for transparency and immutability \cite{Tapscott2016Blockchain}. This integration provides investors with traditional payment convenience while leveraging blockchain's security and transparency benefits.
 
+
 \section{Sprint 7: Blockchain Payment Integration}
 
 \subsection{Analysis}
@@ -18,7 +19,7 @@ The blockchain integration within the \textbf{\textcolor{primary}{Korpor}} platf
 
 \subsubsection{Objectives of Integration}
 
-The blockchain integration enhances the platform through three key objectives: \textbf{Security and trust} via cryptographically signed transactions \cite{Zheng2018BlockchainChallenges}, \textbf{Decentralization and immutability} ensuring data cannot be altered \cite{Antonopoulos2018MasteringEthereum}, and \textbf{Smart contract automation} for efficient business logic execution \cite{Bartoletti2017EmpiricalAnalysis}.
+The blockchain integration enhances the platform through three key objectives: \textbf{Security and trust} via cryptographically signed transactions \cite{Zheng2018BlockchainChallenges}, \textbf{Decentralization and immutability} ensuring data cannot be altered \cite{Antonopoulos2018MasteringEthereum}, and \textbf{Smart contract automation} for efficient business logic execution \cite{Bartoletti2017EmpiricalAnalysis, ZhangBlockchainPropertyRights2023}.
 
 \subsubsection{Use Case Diagram}
 
@@ -141,11 +142,11 @@ The blockchain component is designed to integrate seamlessly within the overall 
 The blockchain implementation utilizes several key technologies:
 
 \begin{itemize}
-    \item \textbf{Solidity:} Smart contract programming language for Ethereum blockchain \cite{SolidityDocs}
-    \item \textbf{Ethers.js:} JavaScript library for blockchain interaction \cite{EthersJSDocs}
+    \item \textbf{Solidity:} Smart contract programming language for Ethereum blockchain
+    \item \textbf{Ethers.js:} JavaScript library for blockchain interaction
     \item \textbf{Sepolia Testnet:} Ethereum test network for safe development
-    \item \textbf{Infura:} Cloud-based Ethereum node access \cite{InfuraWeb3}
-    \item \textbf{MetaMask:} Cryptocurrency wallet for decentralized applications \cite{MetaMaskDocs}
+    \item \textbf{Infura:} Cloud-based Ethereum node access
+    \item \textbf{MetaMask:} Cryptocurrency wallet for decentralized applications
 \end{itemize}
 
 \subsubsection{Third-Party Payment Integration: Paymee}
@@ -187,7 +188,7 @@ Several third-party payment providers are available in Tunisia, including  \text
   
   \item \textbf{Flexibility:} Highly flexible and easily integrates into diverse use cases, adapting to the requirements of individual investors.
 \end{itemize}
-\newpage
+
 % Placeholder for Payment Providers Comparison Table
 \begin{table}[htbp]
 \centering
@@ -228,7 +229,7 @@ The smart contract in the Korpor application is responsible for managing the cri
 
 \paragraph{Data Structures and Functions}
 
-In the smart contract, several data structures and functions are employed to manage and store key information, facilitating efficient interaction with the system \cite{Dannen2017SoliditySmartContracts}.
+In the smart contract, several data structures and functions are employed to manage and store key information, facilitating efficient interaction with the system. This approach guarantees security through smart contract automation while maintaining user convenience, enabling efficient interaction with the system.
 
 \subsubsection{Data Structures}
 
@@ -254,32 +255,12 @@ The investor struct stores individual investment details for tracking purposes.
 
 The mobile application provides a seamless interface for investors to manage their blockchain-based transactions. Figure \ref{fig:mobile-payment-interface} demonstrates the complete mobile payment workflow including investment initiation, payment processing, and withdrawal functionality.
 
-% \begin{figure}[htbp]
-%     \centering
-%     % Three mobile interface images side by side
-%     \begin{subfigure}[b]{0.3\textwidth}
-%         \centering
-%         \includegraphics[width=\textwidth]{images/mobile_invest_interface.png}
-%         \caption{Investment Interface}
-%         \label{fig:mobile-invest}
-%     \end{subfigure}
-%     \hfill
-%     \begin{subfigure}[b]{0.3\textwidth}
-%         \centering
-%         \includegraphics[width=\textwidth]{images/mobile_payment_process.png}
-%         \caption{Payment Process}
-%         \label{fig:mobile-payment}
-%     \end{subfigure}
-%     \hfill
-%     \begin{subfigure}[b]{0.3\textwidth}
-%         \centering
-%         \includegraphics[width=\textwidth]{images/mobile_withdraw_interface.png}
-%         \caption{Withdrawal Interface}
-%         \label{fig:mobile-withdraw}
-%     \end{subfigure}
-%     \caption{Mobile Payment Interface: Investment, Payment, and Withdrawal Process}
-%     \label{fig:mobile-payment-interface}
-% \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.8\textwidth]{images/mobile_payment_interface_combined.png}
+    \caption{Mobile Payment Interface: Investment, Payment, and Withdrawal Process}
+    \label{fig:mobile-payment-interface}
+\end{figure}
 
 
 \subsubsection*{Admin Blockchain Visualization}
